cleanup comments and few unused files